--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,17 @@
     }
   ],
   "require": {
-    "kartik-v/yii2-krajee-base": "~1.7",
+    "kartik-v/yii2-krajee-base": "~1.9",
     "kartik-v/dependent-dropdown": "~1.4"
   },
   "autoload": {
     "psr-4": {
-      "kartik\\depdrop\\": ""
+      "kartik\\depdrop\\": "src"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
     }
   }
 }
