--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,38 @@
 {
-  "name": "kartik-v/yii2-widget-depdrop",
-  "description": "Widget that enables setting up dependent dropdowns with nested dependencies (sub repo split from yii2-widgets)",
-  "keywords": [
-    "yii2",
-    "extension",
-    "widget",
-    "dependent",
-    "dropdown",
-    "form",
-    "jquery",
-    "plugin"
-  ],
-  "homepage": "https://github.com/kartik-v/yii2-widget-depdrop",
-  "type": "yii2-extension",
-  "license": "BSD-3-Clause",
-  "authors": [
-    {
-      "name": "Kartik Visweswaran",
-      "email": "kartikv2@gmail.com",
-      "homepage": "http://www.krajee.com/"
+    "name": "kartik-v/yii2-widget-depdrop",
+    "description": "Widget that enables setting up dependent dropdowns with nested dependencies (sub repo split from yii2-widgets)",
+    "keywords": [
+        "yii2",
+        "extension",
+        "widget",
+        "dependent",
+        "dropdown",
+        "form",
+        "jquery",
+        "plugin"
+    ],
+    "homepage": "https://github.com/kartik-v/yii2-widget-depdrop",
+    "type": "yii2-extension",
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "Kartik Visweswaran",
+            "email": "kartikv2@gmail.com",
+            "homepage": "http://www.krajee.com/"
+        }
+    ],
+    "require": {
+        "kartik-v/yii2-krajee-base": "~1.9",
+        "kartik-v/dependent-dropdown": "~1.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "kartik\\depdrop\\": "src"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
-  ],
-  "require": {
-    "kartik-v/yii2-krajee-base": ">=2.0.0",
-    "kartik-v/dependent-dropdown": "~1.4"
-  },
-  "autoload": {
-    "psr-4": {
-      "kartik\\depdrop\\": "src"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0.x-dev"
-    }
-  }
 }
