--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "kartik-v/yii2-krajee-base": "~1.9",
+        "kartik-v/yii2-krajee-base": ">=2.0.0",
         "kartik-v/dependent-dropdown": "~1.4"
     },
     "autoload": {
