--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	],
     "require": {
         "kartik-v/yii2-krajee-base": ">=2.0.0",
-        "kartik-v/dependent-dropdown": "~1.4"
+        "diginova/kartik-dependent-dropdown": "dev-master"
     },
     "autoload": {
         "psr-4": {
