--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,11 @@
     ],
     "repositories": [
 		{
-			"type": "git",
-			"url": "https://github.com/diginova/kartik-dependent-dropdown.git"
-		}
+            "type": "git",
+            "url": "https://github.com/diginova/kartik-dependent-dropdown.git"
+        }
 	],
+    "minimum-stability": "dev",
     "require": {
         "kartik-v/yii2-krajee-base": ">=2.0.0",
         "kartik-v/dependent-dropdown": "@dev"
